--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run:  npm update handlebars --depth 6 
     - run: npm audit --fix
+      
     - run: npm run build --if-present
     - run: npm test
       env:
